--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "core-js": "^3.17.3",
     "fractional": "^1.0.0",
+    "img": "^3.0.3",
     "prettier": "^2.4.0"
   }
 }
